# ml-engineering-agent-manifesto

./: BOOTSTRAP.md  README.md
rules/: 01_stack_decision.md  02_structure.md  03_quality.md  04_observability.md  05_brownfield.md
templates/: .gitignore  Makefile  agent_rules.md  config.py  design_doc.md  pre-commit-config.yaml  pyproject.toml  ruff.toml  tracker_clearml.py
